@@ -3,6 +3,9 @@ package com.nimbusds.jose;
 
 import java.text.ParseException;
 
+import javax.mail.internet.ContentType;
+import javax.mail.internet.ParameterList;
+
 import net.jcip.annotations.ThreadSafe;
 
 import com.nimbusds.jose.util.Base64URL;
@@ -12,7 +15,7 @@ import com.nimbusds.jose.util.Base64URL;
  * JSON Web Encryption (JWE) object. This class is thread-safe.
  *
  * @author Vladimir Dzhuvinov
- * @version $version$ (2013-03-27)
+ * @version $version$ (2013-05-04)
  */
 @ThreadSafe
 public class JWEObject extends JOSEObject {
@@ -40,6 +43,31 @@ public class JWEObject extends JOSEObject {
 		 * The JWE object is decrypted.
 		 */
 		DECRYPTED;
+	}
+
+
+	/**
+	 * The MIME type of JWE objects serialised to a compact form:
+	 * {@code application/jwe; charset=UTF-8}
+	 */
+	public static final ContentType MIME_TYPE_COMPACT;
+
+
+	/**
+	 * The MIME type of JWE objects serialised to a JSON object form:
+	 * {@code application/jwe-js; charset=UTF-8}
+	 */
+	public static final ContentType MIME_TYPE_JS;
+
+
+	static {
+
+		final ParameterList params = new ParameterList();
+		params.set("charset", "UTF-8");
+
+		MIME_TYPE_COMPACT = new ContentType("application", "jwe", params);
+
+		MIME_TYPE_JS = new ContentType("application", "jwe-js", params);
 	}
 
 
