@@ -3,6 +3,9 @@ package com.nimbusds.jose;
 
 import java.text.ParseException;
 
+import javax.mail.internet.ContentType;
+import javax.mail.internet.ParameterList;
+
 import net.jcip.annotations.ThreadSafe;
 
 import com.nimbusds.jose.util.Base64URL;
@@ -12,10 +15,35 @@ import com.nimbusds.jose.util.Base64URL;
  * Plaintext (unsecured) JOSE object. This class is thread-safe.
  *
  * @author Vladimir Dzhuvinov
- * @version $version$ (2012-10-23)
+ * @version $version$ (2013-05-04)
  */
 @ThreadSafe
 public class PlainObject extends JOSEObject {
+
+
+	/**
+	 * The MIME type of plain JOSE objects serialised to a compact form:
+	 * {@code application/jws; charset=UTF-8}
+	 */
+	public static final ContentType MIME_TYPE_COMPACT;
+
+
+	/**
+	 * The MIME type of plain JOSE objects serialised to a JSON object 
+	 * form: {@code application/jws-js; charset=UTF-8}
+	 */
+	public static final ContentType MIME_TYPE_JS;
+
+
+	static {
+
+		final ParameterList params = new ParameterList();
+		params.set("charset", "UTF-8");
+
+		MIME_TYPE_COMPACT = new ContentType("application", "jws", params);
+
+		MIME_TYPE_JS = new ContentType("application", "jws-js", params);
+	}
 
 
 	/**
