@@ -1,8 +1,6 @@
 package com.nimbusds.jose;
 
 
-import java.text.ParseException;
-
 import junit.framework.TestCase;
 
 import com.nimbusds.jose.util.Base64URL;
@@ -12,16 +10,29 @@ import com.nimbusds.jose.util.Base64URL;
  * Tests JWE object methods.
  *
  * @author Vladimir Dzhuvinov
- * @version $version$ (2012-12-09)
+ * @version $version$ (2013-05-04)
  */
 public class JWEObjectTest extends TestCase {
 
 
+	public void testMIMETypes()
+		throws Exception {
+
+		assertTrue(JWEObject.MIME_TYPE_COMPACT.match("application/jwe"));
+		assertTrue(JWEObject.MIME_TYPE_COMPACT.getParameterList().get("charset").equalsIgnoreCase("UTF-8"));
+		assertEquals(1, JWEObject.MIME_TYPE_COMPACT.getParameterList().size());
+
+		assertTrue(JWEObject.MIME_TYPE_JS.match("application/jwe-js"));
+		assertTrue(JWEObject.MIME_TYPE_JS.getParameterList().get("charset").equalsIgnoreCase("UTF-8"));
+		assertEquals(1, JWEObject.MIME_TYPE_JS.getParameterList().size());
+	}
+
+
 	public void testBase64URLConstructor()
-			throws ParseException {
+		throws Exception {
 
 		JWEHeader header = new JWEHeader(JWEAlgorithm.RSA1_5, 
-				EncryptionMethod.A128CBC_HS256);
+			                         EncryptionMethod.A128CBC_HS256);
 
 		Base64URL firstPart = header.toBase64URL();
 		Base64URL secondPart = new Base64URL("abc");
